# ffmpeg-circular-buffer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  run.sh
include/: cfb.hpp
include/buffer/: buffer.hpp  cfb.hpp  cfb2.hpp  default_buffer.hpp  fill_guard.hpp
include/fetcher/: data_fetcher.hpp  mock_fetcher.hpp
src/: cfb.cpp  test.cpp
src/buffer/: buffer.cpp  cfb.cpp  cfb2.cpp  default_buffer.cpp  fill_guard.cpp
src/fetcher/: mock_fetcher.cpp
